# ptar

./: Cargo.toml  README.md
doc/: todo.md
src/: arc_progress_reader.rs  compress.rs  decompress.rs  lazy_regex.rs  main.rs  progress_reader.rs  thread_offload_reader.rs
