[package]
name = "ptar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.8", features = ["derive", "env", "string"] }
# clap_complete = "4.1.4"
# crossbeam-channel = "0.5.0"
ignore = "0.4.20"
tar = "0.4.38"
tracing = { version = "0.1.37", features = ["valuable"] }
tracing-bunyan-formatter = { version = "0.3.7", features = ["valuable"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json", "time"] }
valuable = { version = "0.1.0", features = ["derive"] }
zstd = { version = "0.12.3", features = ["zstdmt"] }
